nullaway_error_F70F3D9E-55EE-4897-8D4A-CDEFBEDECACE.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-expression/src/main/java/org/springframework/expression/spel/support/ReflectionHelper.java:306: error: [NullAway] dereferenced expression targetType.getElementTypeDescriptor() is @Nullable
					if (targetType.getElementTypeDescriptor().getObjectType() == Optional.class) {
					                                         ^
    (see http://t.uber.com/nullaway )
